--- a/Project-1/index.html
+++ b/Project-1/index.html
@@ -1,91 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>The Tribute Website | A.P.J. Abdul Kalam</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+    <div class="content">
+      <!-- Top Section -->
+      <section class="top_section">
+        <div class="image_container">
+          <img src="./apj.jpg" alt="Dr. A.P.J. Abdul Kalam" />
+        </div>
+        <div class="title">
+          <h1>A.P.J. Abdul Kalam</h1>
+          <h4>1931 - 2015</h4>
+        </div>
+      </section>
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <!-- About Section -->
+      <section class="about_section">
+        <h2>Missile Man of India</h2>
+        <p>
+          <b>Avul Pakir Jainulabdeen Abdul Kalam</b> (15 October 1931 - 27 July 2015) was an Indian aerospace scientist who served as the 11th president of India from 2002 to 2007. Born and raised in Rameswaram, Tamil Nadu, he studied physics and aerospace engineering.  
+          Over the next four decades, he worked as a scientist and administrator, primarily at the <b>Defence Research and Development Organisation (DRDO)</b> and <b>Indian Space Research Organisation (ISRO)</b>, playing a key role in India's civilian space programme and military missile development.  
+          Known as the "Missile Man of India" for his work on ballistic missile and launch vehicle technology, Dr. Kalam also played a crucial role in India's Pokhran-II nuclear tests in 1998.
+        </p>
+      </section>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Tribute Website | A.P. J Abdul Kalam</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+      <!-- Biography Section -->
+      <section class="biography_section">
+        <h3>Biographies & Works</h3>
+        <ul>
+          <li><i>Eternal Quest: Life and Times of Dr Kalam</i> – S Chandra, 2002</li>
+          <li><i>President A P J Abdul Kalam</i> – R K Pruthi, 2002</li>
+          <li><i>The Visionary of India</i> – K Bhushan, G Katyal, 2002</li>
+          <li><i>A Little Dream</i> (Documentary) – P. Dhanapal, 2008</li>
+          <li><i>The Kalam Effect</i> – P M Nair, 2008</li>
+          <li><i>My Days With Mahatma Abdul Kalam</i> – Fr A K George, 2009</li>
+          <li><i>A.P.J. Abdul Kalam: A Life</i> – Arun Tiwari, 2015</li>
+          <li><i>The People's President</i> – S M Khan, 2016</li>
+        </ul>
+      </section>
 
-  <body>
-    <div class="container">
-      <div class="content">
-        <section class="top_section">
-          <div class="image_container">
-            <img src="./apj.jpg" alt="tribute" />
-          </div>
-          <div>
-            <h1>A . P . J Abdul Kalam</h1>
-            <h4>1931 - 2015</h4>
-          </div>
-        </section>
-        <section class="about_section">
-          <h2>Missile Man of India</h2>
-          <p>
-            <b>Avul Pakir Jainulabdeen Abdul Kalam</b> (15 October 1931 - 27
-            July 2015) was an Indian aerospace scientist who served as the 11th
-            president of India from 2002 to 2007. He was born and raised in
-            Rameswaram, Tamil Nadu and studied physics and aerospace
-            engineering. He spent the next four decades as a scientist and
-            science administrator, mainly at the Defence Research and
-            Development Organisation (DRDO) and Indian Space Research
-            Organisation (ISRO) and was intimately involved in India's civilian
-            space programme and military missile development efforts.[1] He thus
-            came to be known as the Missile Man of India for his work on the
-            development of ballistic missile and launch vehicle
-            technology.[2][3][4] He also played a pivotal organisational,
-            technical, and political role in India's Pokhran-II nuclear tests in
-            1998, the first since the original nuclear test by India in 1974.
-          </p>
-        </section>
-        <section class="biography_section">
-          <h3>Biographies</h3>
-          <ul>
-            <li>
-              Eternal Quest: Life and Times of Dr Kalam by S Chandra; Pentagon
-              Publishers, 2002.
-            </li>
-            <li>
-              President A P J Abdul Kalam by R K Pruthi; Anmol Publications,
-              2002.
-            </li>
-            <li>
-              A P J Abdul Kalam: The Visionary of India by K Bhushan, G Katyal;
-              A P H Pub Corp, 2002.
-            </li>
-            <li>
-              A Little Dream (documentary film) by P. Dhanapal; Minveli Media
-              Works Private Limited, 2008.
-            </li>
-            <li>
-              The Kalam Effect: My Years with the President by P M Nair; Harper
-              Collins, 2008.
-            </li>
-            <li>
-              My Days With Mahatma Abdul Kalam by Fr A K George; Novel
-              Corporation, 2009.
-            </li>
-            <li>
-              A.P.J. Abdul Kalam: A Life by Arun Tiwari; Haper Collins, 2015.
-            </li>
-            <li>
-              The People's President: Dr A P J Abdul Kalam by S M Khan;
-              Bloomsbury Publishing, 2016.
-            </li>
-          </ul>
-        </section>
-        <footer>
-          <p>
-            Read more about A. P. J. Abdul Kalam on
-            <a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam"
-              >Wikipedia.</a
-            >
-          </p>
-        </footer>
-      </div>
+      <!-- Footer -->
+      <footer>
+        <p>Read more about Dr. A.P.J. Abdul Kalam on
+          <a href="https://en.wikipedia.org/wiki/A._P._J._Abdul_Kalam" target="_blank">
+            Wikipedia
+          </a>.
+        </p>
+      </footer>
     </div>
-  </body>
+  </div>
+</body>
 </html>
