--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Himanshu's GYM</title>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
-<link href="https://fonts.googleapis.com/css?family=Baloo+Bhai&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
 <body>
     <header class="header">
         <div class="left">
-            <img src="gym.png" alt="error">
+            <img src="gym.png" alt="Gym Logo">
             <div>Himanshu's GYM</div>
         </div>
         <div class="mid">
@@ -28,24 +27,38 @@
             <button class="btn">Email us</button>
         </div>
     </header>
+
     <div class="container">
-        <h1>Join the GYM form</h1>
+        <h1>Join the GYM Form</h1>
         <form action="noaction.php">
             <div class="form-group">
-                <input type="text" name="" placeholder="Enter Your Name">
+                <input type="text" placeholder="Enter Your Name" required>
             </div>
             <div class="form-group">
-                <input type="text" name="" placeholder="Enter Your Age">
+                <input type="number" placeholder="Enter Your Age" min="10" max="80" required>
             </div>
             <div class="form-group">
-                <input type="text" name="" placeholder="Enter Your Gender">
+                <select required>
+                    <option value="">Select Gender</option>
+                    <option>Male</option>
+                    <option>Female</option>
+                    <option>Other</option>
+                </select>
             </div>
             <div class="form-group">
-                <input type="text" name="" placeholder="Enter Your Phone Number">
+                <input type="tel" placeholder="Enter Your Phone Number" pattern="[0-9]{10}" required>
             </div>
             <button class="btn">Submit</button>
         </form>
     </div>
-</body>
 
+    <footer>
+        <p>© 2025 Himanshu's GYM | All Rights Reserved</p>
+        <div class="social-icons">
+            <a href="#">🏋️</a>
+            <a href="#">📞</a>
+            <a href="#">📧</a>
+        </div>
+    </footer>
+</body>
 </html>
