--- a/Project-4/index.html
+++ b/Project-4/index.html
@@ -1,80 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Parallax Website</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <section class="pimg1">
-      <div class="ptext">
-        <span class="textBg"> Parallax Website </span>
-      </div>
-    </section>
-    <section class="section section-light">
-      <h2>Section One</h2>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam aut
-        amet odio est laborum obcaecati perferendis! Mollitia officiis,
-        consectetur vitae laborum eos expedita reprehenderit nostrum tempore.
-        Atque laborum repudiandae adipisci nihil. Natus cum sapiente culpa
-        excepturi quasi magni quibusdam ipsum accusamus laborum, numquam odit!
-        Nisi repudiandae cumque incidunt tempora explicabo vero in corporis
-        provident quidem quisquam sit, asperiores ullam placeat ut iure pariatur
-        ratione laboriosam totam amet minus. Porro, quam quisquam explicabo
-        rerum labore, tempora officia eveniet mollitia iure a fugiat, magnam at.
-        Vero magni aliquam ea molestias omnis, quia fuga architecto maiores ut
-        magnam! Culpa, cum. Blanditiis, tempore temporibus.
-      </p>
-    </section>
-    <section class="pimg2">
-      <div class="ptext">
-        <span class="textBg"> Explore Nature</span>
-      </div>
-    </section>
-    <section class="section section-dark">
-      <h2>Section Two</h2>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam aut
-        amet odio est laborum obcaecati perferendis! Mollitia officiis,
-        consectetur vitae laborum eos expedita reprehenderit nostrum tempore.
-        Atque laborum repudiandae adipisci nihil. Natus cum sapiente culpa
-        excepturi quasi magni quibusdam ipsum accusamus laborum, numquam odit!
-        Nisi repudiandae cumque incidunt tempora explicabo vero in corporis
-        provident quidem quisquam sit, asperiores ullam placeat ut iure pariatur
-        ratione laboriosam totam amet minus. Porro, quam quisquam explicabo
-        rerum labore, tempora officia eveniet mollitia iure a fugiat, magnam at.
-        Vero magni aliquam ea molestias omnis, quia fuga architecto maiores ut
-        magnam! Culpa, cum. Blanditiis, tempore temporibus.
-      </p>
-    </section>
-    <section class="pimg3">
-      <div class="ptext">
-        <span class="textBg"> LOOK, DEEP INTO NATURE</span>
-      </div>
-    </section>
-    <section class="section section-dark">
-      <h2>Section Three</h2>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam aut
-        amet odio est laborum obcaecati perferendis! Mollitia officiis,
-        consectetur vitae laborum eos expedita reprehenderit nostrum tempore.
-        Atque laborum repudiandae adipisci nihil. Natus cum sapiente culpa
-        excepturi quasi magni quibusdam ipsum accusamus laborum, numquam odit!
-        Nisi repudiandae cumque incidunt tempora explicabo vero in corporis
-        provident quidem quisquam sit, asperiores ullam placeat ut iure pariatur
-        ratione laboriosam totam amet minus. Porro, quam quisquam explicabo
-        rerum labore, tempora officia eveniet mollitia iure a fugiat, magnam at.
-        Vero magni aliquam ea molestias omnis, quia fuga architecto maiores ut
-        magnam! Culpa, cum. Blanditiis, tempore temporibus.
-      </p>
-    </section>
-    <section class="pimg1">
-      <div class="ptext">
-        <span class="textBg"> HIMANSHU SHARMA </span>
-      </div>
-    </section>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Parallax Website</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <!-- Navbar -->
+  <header>
+    <nav class="navbar">
+      <div class="logo">🌿 Nature</div>
+      <ul class="nav-links">
+        <li><a href="#section1">Home</a></li>
+        <li><a href="#section2">Explore</a></li>
+        <li><a href="#section3">Gallery</a></li>
+        <li><a href="#footer">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="pimg1">
+    <div class="ptext">
+      <span class="textBg"> Parallax Experience </span>
+      <p class="subtitle">Scroll down to explore nature’s beauty</p>
+    </div>
+  </section>
+
+  <!-- Section One -->
+  <section id="section1" class="section section-light">
+    <h2>Welcome to Nature</h2>
+    <p>
+      Discover the breathtaking beauty of landscapes and nature through this
+      immersive parallax scrolling website. Experience the calmness, freshness,
+      and power of our natural world.
+    </p>
+  </section>
+
+  <!-- Section Two -->
+  <section class="pimg2">
+    <div class="ptext">
+      <span class="textBg"> Explore Nature </span>
+    </div>
+  </section>
+
+  <section id="section2" class="section section-dark">
+    <h2>Why Choose Nature?</h2>
+    <p>
+      Nature helps us reconnect with our inner self. It reduces stress, improves
+      creativity, and brings peace of mind. The mountains, forests, rivers, and
+      skies all tell stories of resilience and beauty.
+    </p>
+  </section>
+
+  <!-- Section Three -->
+  <section class="pimg3">
+    <div class="ptext">
+      <span class="textBg"> Look Deep Into Nature </span>
+    </div>
+  </section>
+
+  <section id="section3" class="section section-light">
+    <h2>Gallery</h2>
+    <p>
+      Explore some of the finest moments captured in the lap of nature. Each
+      picture tells a story, each color brings peace, and each moment is worth
+      remembering.
+    </p>
+  </section>
+
+  <!-- Footer -->
+  <footer id="footer">
+    <p>Designed with ❤️ by Himanshu Sharma | © 2025 All Rights Reserved</p>
+  </footer>
+</body>
 </html>
