--- a/Project-5/index.html
+++ b/Project-5/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restaurant Website</title>
+    <title>Restaurant Website | HTML & CSS</title>
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/7a4b62b0a4.js"
@@ -12,155 +12,123 @@
     ></script>
   </head>
   <body>
+    <!-- Navigation -->
     <nav>
       <div class="navigation container">
         <div class="logo_container">
           <img src="images/logo.png" alt="logo" />
         </div>
+        <ul class="nav_links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Menu</a></li>
+          <li><a href="#">Offers</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
         <div class="bar_icon">
           <i class="fas fa-bars"></i>
         </div>
       </div>
     </nav>
+
     <!-- Hero Section -->
-    <div class="container">
-      <div class="hero">
+    <header class="hero_section">
+      <div class="container hero">
+        <div class="hero_content">
+          <div class="tag">🔥 50% Off on All Products</div>
+          <h1>Enjoy Your Delicious Food</h1>
+          <p>
+            Fresh, Healthy & Fast. Experience a taste that brings happiness to your table.  
+          </p>
+          <button class="explore_btn">🍽 Explore Now</button>
+        </div>
         <div class="hero_image">
           <img src="images/hero_image.png" alt="hero image" />
         </div>
-        <div class="hero_content">
-          <div class="tag">50% Off on All Products</div>
-          <h1>Enjoy Your Delicious Food</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Voluptates, iste corporis tempore necessitatibus inventore ex?
-          </p>
-          <button class="explore_btn">Explore Now</button>
-        </div>
       </div>
-      <section class="features">
-        <div class="feature">
-          <img src="icons/discount.png" alt="" />
-          <div class="feature_content">
-            <h3>Discount Voucher</h3>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          </div>
-        </div>
-        <div class="feature">
-          <img src="icons/fresh.png" alt="" />
-          <div class="feature_content">
-            <h3>Fresh Healthy Food</h3>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          </div>
-        </div>
-        <div class="feature">
-          <img src="icons/delivery.png" alt="" />
-          <div class="feature_content">
-            <h3>Fast Home Delivery</h3>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-          </div>
-        </div>
-      </section>
-      <div class="divider"></div>
-      <div class="menu">
-        <div class="tag">Our Menu</div>
-        <h2>Explore Our Menu</h2>
+    </header>
 
-        <div class="grid">
-          <div class="item1">
-            <img
-              class="grid-image"
-              src="images/grid_image1.png"
-              alt="image 1"
-            />
-          </div>
-          <div class="item2">
-            <img
-              class="grid-image"
-              src="images/grid_image2.png"
-              alt="image 2"
-            />
-          </div>
-          <div class="item3">
-            <img
-              class="grid-image"
-              src="images/grid_image3.png"
-              alt="image 3"
-            />
-          </div>
-          <div class="item4">
-            <img
-              class="grid-image"
-              src="images/grid_image4.png"
-              alt="image 4"
-            />
-          </div>
-          <div class="item5">
-            <img
-              class="grid-image"
-              src="images/grid_image5.png"
-              alt="image 5"
-            />
-          </div>
-          <div class="item6">
-            <img
-              class="grid-image"
-              src="images/grid_image6.png"
-              alt="image 6"
-            />
-          </div>
-          <div class="item7">
-            <img
-              class="grid-image"
-              src="images/grid_image7.png"
-              alt="image 7"
-            />
-          </div>
+    <!-- Features -->
+    <section class="features">
+      <div class="feature">
+        <img src="icons/discount.png" alt="Discount" />
+        <div class="feature_content">
+          <h3>Discount Voucher</h3>
+          Save big with our exclusive discount vouchers.
         </div>
       </div>
-    </div>
+      <div class="feature">
+        <img src="icons/fresh.png" alt="Fresh Food" />
+        <div class="feature_content">
+          <h3>Fresh Healthy Food</h3>
+          Only the freshest ingredients, delivered daily.
+        </div>
+      </div>
+      <div class="feature">
+        <img src="icons/delivery.png" alt="Delivery" />
+        <div class="feature_content">
+          <h3>Fast Home Delivery</h3>
+          Hot and fresh food delivered at lightning speed.
+        </div>
+      </div>
+    </section>
+
+    <!-- Divider -->
+    <div class="divider"></div>
+
+    <!-- Menu -->
+    <section class="menu container">
+      <div class="tag">Our Menu</div>
+      <h2>Explore Our Menu</h2>
+      <div class="grid">
+        <div class="item1"><img class="grid-image" src="images/grid_image1.png" alt="image 1" /></div>
+        <div class="item2"><img class="grid-image" src="images/grid_image2.png" alt="image 2" /></div>
+        <div class="item3"><img class="grid-image" src="images/grid_image3.png" alt="image 3" /></div>
+        <div class="item4"><img class="grid-image" src="images/grid_image4.png" alt="image 4" /></div>
+        <div class="item5"><img class="grid-image" src="images/grid_image5.png" alt="image 5" /></div>
+        <div class="item6"><img class="grid-image" src="images/grid_image6.png" alt="image 6" /></div>
+        <div class="item2"><img class="grid-image" src="images/grid_image2.png" alt="image 2" /></div>
+        <div class="item7"><img class="grid-image" src="images/grid_image7.png" alt="image 7" /></div>
+      </div>
+    </section>
+
+    <!-- Footer -->
     <footer>
       <div class="footer_container container">
         <div class="footer_logo">
           <img src="images/logo.png" alt="logo" />
+          <p>Bringing taste and happiness to your doorstep.</p>
         </div>
         <div class="link_lists">
           <h3>Main Links</h3>
           <ul>
-            <li>Order Tracking</li>
-            <li>New Order</li>
-            <li>Contact Us</li>
-            <li>News & Blogs</li>
+            <li><a href="#">Order Tracking</a></li>
+            <li><a href="#">New Order</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">News & Blogs</a></li>
           </ul>
         </div>
         <div class="link_lists">
           <h3>Support</h3>
           <ul>
-            <li>About Us</li>
-            <li>Privacy Policy</li>
-            <li>Terms & Conditons</li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
           </ul>
         </div>
         <div class="news_letter">
-          <h3>Support</h3>
+          <h3>Subscribe</h3>
           <input type="email" placeholder="Enter your Email..." />
+          <button class="explore_btn">Subscribe</button>
           <h3>Follow Us</h3>
           <div class="icon_container">
-            <div class="icon">
-              <i class="fa fa-facebook"></i>
-            </div>
-            <div class="icon">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </div>
-            <div class="icon">
-              <i class="fa fa-instagram" aria-hidden="true"></i>
-            </div>
-            <div class="icon">
-              <i class="fa fa-youtube" aria-hidden="true"></i>
-            </div>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="#"><i class="fa fa-youtube"></i></a>
           </div>
         </div>
       </div>
+      <div class="footer_bottom">© 2025 Restaurant Website | Made with ❤️ by Himanshu Sharma</div>
     </footer>
   </body>
 </html>
