--- a/Project-8/index.html
+++ b/Project-8/index.html
@@ -4,146 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Dashboard UI</title>
+    <title>Responsive Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <!-- Sidebar Toggle -->
-    <input type="checkbox" id="toggleSidebar">
 
-    <!-- Dark Mode Toggle -->
-    <input type="checkbox" id="toggleTheme" hidden>
-
-    <!-- Modal Trigger -->
-    <input type="checkbox" id="openModal">
-
-    <div class="dashboard">
-        <!-- Sidebar -->
-        <aside class="sidebar">
-            <h2>MyDash</h2>
-            <ul class="menu">
-                <li><a href="#">🏠 Home</a></li>
-                <li><a href="#">📊 Analytics</a></li>
-                <li><a href="#">⚙️ Settings</a></li>
-                <li><label for="openModal">📩 Messages</label></li>
+    <!-- Navbar -->
+    <header>
+        <h1>BrandName</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#features">Features</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
-        </aside>
+        </nav>
+    </header>
 
-        <!-- Main -->
-        <main class="main">
-            <!-- Topbar -->
-            <div class="topbar">
-                <h1>Welcome Back 👋</h1>
-                <div class="actions">
-                    <div class="search">
-                        <input type="text" placeholder="Search...">
-                    </div>
-                    <label for="toggleSidebar" style="cursor:pointer;">📚</label>
-                    <label for="toggleTheme" style="cursor:pointer;">🌗</label>
-                </div>
-            </div>
 
-            <!-- Cards -->
-            <div class="cards">
-                <div class="card">
-                    <h3>Revenue</h3>
-                    <p>$12,340</p>
-                    <div class="progress"><span style="width:70%"></span></div>
-                </div>
-                <div class="card">
-                    <h3>Users</h3>
-                    <p>2,560</p>
-                    <div class="progress"><span style="width:50%"></span></div>
-                </div>
-                <div class="card">
-                    <h3>Orders</h3>
-                    <p>1,230</p>
-                    <div class="progress"><span style="width:80%"></span></div>
-                </div>
-                <div class="card">
-                    <h3>Growth</h3>
-                    <p>+18%</p>
-                    <div class="progress"><span style="width:90%"></span></div>
-                </div>
-            </div>
-
-            <!-- Tabs -->
-            <div class="tabs">
-                <input type="radio" name="tab" id="tab1" checked>
-                <label for="tab1">Orders</label>
-
-                <input type="radio" name="tab" id="tab2">
-                <label for="tab2">Analytics</label>
-
-                <input type="radio" name="tab" id="tab3">
-                <label for="tab3">Settings</label>
-            </div>
-
-            <div class="content">
-                <div class="tab-content" id="content1">
-                    <h2>Recent Orders</h2>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Order ID</th>
-                                <th>Customer</th>
-                                <th>Status</th>
-                                <th>Amount</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>#1023</td>
-                                <td>John Doe</td>
-                                <td>✅ Completed</td>
-                                <td>$120</td>
-                            </tr>
-                            <tr>
-                                <td>#1024</td>
-                                <td>Jane Smith</td>
-                                <td>⏳ Pending</td>
-                                <td>$250</td>
-                            </tr>
-                            <tr>
-                                <td>#1025</td>
-                                <td>Mike Johnson</td>
-                                <td>❌ Canceled</td>
-                                <td>$80</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="tab-content" id="content2">
-                    <h2>Analytics</h2>
-                    <p>Analytics graphs could be built with pure CSS charts here 🎨.</p>
-                </div>
-
-                <div class="tab-content" id="content3">
-                    <h2>Settings</h2>
-                    <p>Customize your dashboard layout and preferences here.</p>
-                </div>
-            </div>
-        </main>
-    </div>
-
-    <!-- Modal -->
-    <div class="modal">
-        <div class="modal-box">
-            <h2>New Message</h2>
-            <p>You have 3 unread messages.</p>
-            <label for="openModal">Close</label>
+    <!-- Hero -->
+    <section class="hero" id="home">
+        <div>
+            <h2 class="fade-in">Build Modern Websites with Ease</h2>
+            <p class="fade-in delay">Create responsive, beautiful, and user-friendly websites with only HTML & CSS.</p>
+            <a href="#features" class="btn fade-in delay2">Get Started</a>
         </div>
-    </div>
+    </section>
 
-    <script>
-        // Only for theme toggle (using body class)
-        document.getElementById("toggleTheme").addEventListener("change", e => {
-            document.body.classList.toggle("light", e.target.checked);
-        });
-    </script>
+
+    <!-- Features -->
+    <section class="features" id="features">
+        <h2 class="slide-up">Our Features</h2>
+        <div class="feature-grid">
+            <div class="card slide-up">
+                <h3>⚡ Fast Performance</h3>
+                <p>Optimized code ensures quick loading times and smooth experiences.</p>
+            </div>
+            <div class="card slide-up delay">
+                <h3>📱 Responsive Design</h3>
+                <p>Looks great on desktop, tablet, and mobile devices.</p>
+            </div>
+            <div class="card slide-up delay2">
+                <h3>🎨 Modern UI</h3>
+                <p>Clean and modern designs built with Flexbox & Grid.</p>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Testimonials -->
+    <section class="testimonials" id="testimonials">
+        <h2 class="fade-in">What Our Users Say</h2>
+        <div class="testimonial-grid">
+            <div class="testimonial fade-in">
+                <p>“This landing page template helped me launch my product quickly!”</p>
+                <h4>- Alex</h4>
+            </div>
 </body>
 
 </html>
